# latarnik_gpt

./: create_justifications_message.py  defaults.py  llm_logic.py  main.py  prompts.py  pyproject.toml  requirements.txt
data/: justifications.csv  justifications_message.txt
